using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Axis
{
    public const string VERTICAL_AIXS = "Vertical";
    public const string HORIZONTAL_AIXS = "Horizontal";
}

public class tags

{
    public const string Player_tag = "Player";
}

public class animationTags
{
    public const string walk_paramter = "Walk";
    public const string defend_paramter = "Defend";
    public const string attack_1_paramter = "Attack1";
    public const string attack_2_paramter = "Attack2";
}